Fixed spacing and labeling for variant summary card

--- a/client/assets/css/siteVuetify.css
+++ b/client/assets/css/siteVuetify.css
@@ -94,7 +94,9 @@ html {
 .btn {
   line-height: 1;
 }
-
+.btn__content {
+  height: initial;
+}
 .menuable__content__active {
   background-color: white;
 }
